Prevent overflow-x

--- a/style.css
+++ b/style.css
@@ -7,11 +7,6 @@ html {
     overflow-x: hidden;
 }
 
-body {
-    width:100%;
-    overflow-x:hidden;
-}
-
 h1,h2,h3 {
 	border-bottom:0;
 }
